--- a/k8s/prometheus-federation/services/prometheus-tls-basic.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-basic.yml
@@ -11,7 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
-    nginx.ingress.kubernetes.io/app-root: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   tls:
   - hosts:
@@ -21,7 +21,7 @@ spec:
   - host: prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
-      - path: /basic
+      - path: /basic(/|$)(.*)
         backend:
           serviceName: prometheus-tls-service
           servicePort: 9090
