--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -26,6 +26,7 @@ spec:
         - --cookie-secret=0tcbJv2l9T1uwN0nxTSqeA==
         - --email-domain=measurementlab.net
         - --email-domain={{GCLOUD_PROJECT}}.iam.gserviceaccount.com
+        - --email-domain=northeastern.edu
         - --set-xauthrequest=true
         image: quay.io/oauth2-proxy/oauth2-proxy:v7.0.0
         name: oauth2-proxy
