--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -27,6 +27,7 @@ spec:
         - --email-domain=measurementlab.net
         - --email-domain={{GCLOUD_PROJECT}}.iam.gserviceaccount.com
         - --email-domain=northeastern.edu
+        - --email-domain=husky.neu.edu
         - --set-xauthrequest=true
         image: quay.io/oauth2-proxy/oauth2-proxy:v7.0.0
         name: oauth2-proxy
