--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -494,9 +494,8 @@ scrape_configs:
       # The default __address__ value is a target host from the config file.
       # Here, we set (i.e. "replace") a request parameter "target" equal to the
       # host value. NOTE: we also insert a trailing "." to optimize DNS lookup.
-      # NOTE: all address ports must be specified explicitly.
       - source_labels: [__address__]
-        regex: (.*)(:.*)
+        regex: (.*)(:.*)?
         target_label: __param_target
         replacement: ${1}.${2}
 
