s/neu.edu/husky.neu.edu/ in oauth2-proxy.yml

--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -26,7 +26,7 @@ spec:
         - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
         - --email-domain=measurementlab.net
         - --email-domain={{GCLOUD_PROJECT}}.iam.gserviceaccount.com
-        - --email-domain=neu.edu
+        - --email-domain=husky.neu.edu
         - --email-domain=northeastern.edu
         - --set-xauthrequest=true
         image: quay.io/oauth2-proxy/oauth2-proxy:v7.0.0
