--- a/k8s/data-processing/deployments/node-exporter.yml
+++ b/k8s/data-processing/deployments/node-exporter.yml
@@ -15,7 +15,7 @@ spec:
         prometheus.io/scrape: 'true'
     spec:
       containers:
-      - image: prom/node-exporter
+      - image: prom/node-exporter:v1.1.1
         name: node-exporter
         ports:
         - containerPort: 9100
