--- a/k8s/prometheus-federation/deployments/oauth2-proxy.yml
+++ b/k8s/prometheus-federation/deployments/oauth2-proxy.yml
@@ -29,6 +29,7 @@ spec:
         - --email-domain=husky.neu.edu
         - --email-domain=northeastern.edu
         - --set-xauthrequest=true
+        - --whitelist-domain=.measurementlab.net
         image: quay.io/oauth2-proxy/oauth2-proxy:v7.0.0
         name: oauth2-proxy
         ports:
