--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -24,6 +24,7 @@ spec:
                 "--type=gauge", "--query=/queries/bq_annotation.sql",
                 "--type=gauge", "--query=/queries/bq_gardener_parse_time.sql",
                 "--type=gauge", "--query=/queries/bq_gardener.sql",
+                "--type=gauge", "--query=/queries/bq_daily_archives.sql",
               ]
         ports:
         - containerPort: 9050
