--- a/config/federation/bigquery/bq_daily_archive.sql.template
+++ b/config/federation/bigquery/bq_daily_archive.sql.template
@@ -9,6 +9,6 @@ UNION ALL
 
 -- Determines if reprocessing is working e2e.
 SELECT "annotation" as datatype, COUNT(DISTINCT parser.ArchiveURL ) AS value_count,
-FROM `{{PROJECT}.raw_ndt.annotation`
+FROM `{{PROJECT}}.raw_ndt.annotation`
 WHERE -- The ETL SLO for reprocessing is two days, so only count archives from two days ago.
   date = DATE_SUB(CURRENT_DATE(), INTERVAL 2 DAY)
