--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -12,7 +12,7 @@ spec:
       labels:
         run: bigquery-exporter
         # Update this string to trigger redeployment, or delete the pod.
-        update: '2020-10-26-a'
+        update: '2021-03-02-c'
       annotations:
         prometheus.io/scrape: 'true'
     spec:
@@ -24,6 +24,7 @@ spec:
                 "--type=gauge", "--query=/queries/bq_annotation.sql",
                 "--type=gauge", "--query=/queries/bq_gardener_parse_time.sql",
                 "--type=gauge", "--query=/queries/bq_gardener.sql",
+                "--type=gauge", "--query=/queries/bq_daily_archive.sql",
               ]
         ports:
         - containerPort: 9050
