--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -163,6 +163,8 @@ spec:
                 # NOTE: the output directory is different to use different target service.
                 "--http-target=/targets/script-targets-federation/ndt5_client.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/script-targets/ndt5_client.json",
+                "--http-target=/targets/script-targets-federation/wehe_client.json",
+                "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/script-targets/wehe_client.json",
                 "--http-target=/targets/blackbox-targets/ndt_raw.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets/ndt_raw.json",
                 "--http-target=/targets/blackbox-targets-ipv6/ndt_raw_ipv6.json",
