--- a/config/federation/prometheus/rules.yml
+++ b/config/federation/prometheus/rules.yml
@@ -36,10 +36,18 @@ groups:
 - name: rules.yml
   rules:
 
-## Parser volume checks.
-#
-# This rule optimizes the alert query used for ParserDailyVolumeTooLow. Rather
-# than calculate multi-day values continuously, this rule will maintain a history
-# of the precalculated value needed by the rule.
+  ## Parser volume checks.
+  #
+  # This rule optimizes the alert query used for ParserDailyVolumeTooLow. Rather
+  # than calculate multi-day values continuously, this rule will maintain a history
+  # of the precalculated value needed by the rule.
   - record: candidate_service:etl_test_count:increase24h
     expr: sum by(service) (increase(etl_test_count{service!~".*batch.*",status="ok"}[1d]))
+
+  # Calculates the daily increase of GCS files for all datatypes. The
+  # expression uses subtraction rather than increase() to improve the accuracy
+  # of the result. Evidently, increase() is off 8-10 archives. The drawback is
+  # that this metric will be incorrect for 24hrs after the GCS exporter restarts.
+  - record: daily_public:gcs_archive_files:increase24h
+    expr: ((gcs_archive_files_total{bucket="archive-measurement-lab"}) -
+           (gcs_archive_files_total{bucket="archive-measurement-lab"} offset 24h)) > 0
