Fix alert query for bq daily archive datatype

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -627,7 +627,7 @@ groups:
   - alert: Pipeline_GCSArchivesMissingFromBigQuery
     expr: |
       abs(
-         sum(bq_daily_archive_count {datatype="ndt7"}) - ignoring(experiment)
+         sum by(datatype) (bq_daily_archive_count {datatype="ndt7"}) - ignoring(experiment)
          (experiment_datatype:gcs_archive_files:increase24h{experiment="ndt", datatype="ndt7"} offset 14h)
       ) > 110
     for: 6h
