--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -23,6 +23,8 @@ spec:
                 "-gauge-query=/queries/bq_gardener_parse_time.sql",
                 "-gauge-query=/queries/bq_gardener.sql",
                 "-gauge-query=/queries/bq_daily_archive.sql",
+                "-gauge-query=/queries/bq_daily_tests.sql",
+                "-gauge-query=/queries/bq_server.sql",
               ]
         ports:
         - containerPort: 9348
