--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -7,8 +7,8 @@ scripts:
       monitoring-token -machine=${TARGET} -service=ndt/ndt5 --
       ndt5-client -exit-on-error=1 -exit-on-warning=1 -throttle=196608 -protocol=ndt5+wss
     timeout: 50
-#  - name: 'wehe_client'
-#    script: EXPERIMENT=wehe cache_exit_code.sh 600
-#      monitoring-token -machine=${TARGET} -service=wehe/replay --
-#      java -jar wehe-cmdline/wehe-cmdline.jar -s ${TARGET} -n applemusic -t wehe-cmdline/res/ -c
-#    timeout: 50
+  - name: 'wehe_client'
+    script: EXPERIMENT=wehe cache_exit_code.sh 600
+      monitoring-token -machine=${TARGET} -service=wehe/replay --
+      java -jar wehe-cmdline/wehe-cmdline.jar -m ${MONITORING_URL} -s ${TARGET} -n applemusic -t wehe-cmdline/res/ -c
+    timeout: 50
