--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -4,7 +4,7 @@
 scripts:
   - name: 'ndt5_client'
     script: EXPERIMENT=ndt5 cache_exit_code.sh 600
-      monitoring-token -machine=${TARGET} -service=ndt/ndt5 --
+      monitoring-token -machine=${TARGET} -service=ndt/ndt5 -service-url --env-name SERVICE_URL --
       ndt5-client -exit-on-error=1 -exit-on-warning=1 -throttle=196608 -protocol=ndt5+wss
     timeout: 50
   - name: 'wehe_client'
