--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -10,5 +10,5 @@ scripts:
   - name: 'wehe_client'
     script: EXPERIMENT=wehe cache_exit_code.sh 600
       monitoring-token -machine=${TARGET} -service=wehe/replay --
-      java -jar wehe-cmdline/wehe-cmdline.jar -m ${MONITORING_URL} -s ${TARGET} -n applemusic -t wehe-cmdline/res/ -c
+      java -jar wehe-cmdline/wehe-cmdline.jar -m ${MONITORING_URL} -n applemusic -t wehe-cmdline/res/ -c
     timeout: 50
