--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -3,12 +3,14 @@
 # LOCATE_URL=<locate service url>
 scripts:
   - name: 'ndt5_client'
-    script: EXPERIMENT=ndt5 cache_exit_code.sh 600
+    script: >
+      EXPERIMENT=ndt5 cache_exit_code.sh 600
       monitoring-token -machine=${TARGET} -service=ndt/ndt5 -service-url --env-name SERVICE_URL --
       ndt5-client -exit-on-error=1 -exit-on-warning=1 -throttle=196608 -protocol=ndt5+wss
     timeout: 50
   - name: 'wehe_client'
-    script: EXPERIMENT=wehe cache_exit_code.sh 600
+    script: >
+      EXPERIMENT=wehe cache_exit_code.sh 600
       monitoring-token -machine=${TARGET} -service=wehe/replay --
-      java -jar wehe-cmdline/wehe-cmdline.jar -m ${MONITORING_URL} -n applemusic -t wehe-cmdline/res/ -c
+      wehe-client.sh -n applemusic -t wehe-cmdline/res/ -c
     timeout: 50
