--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -10,7 +10,8 @@ WITH all_types AS (
     parser.Time as parseTime,
   FROM
     `{{PROJECT}}.raw_ndt.ndt7`
-  WHERE date > date('2019-01-01')
+  WHERE
+    date > date('2019-01-01')
   UNION ALL
   SELECT
     "annotation" AS datatype,
@@ -19,7 +20,8 @@ WITH all_types AS (
     parser.Time as parseTime,
   FROM
     `{{PROJECT}}.raw_ndt.annotation`
-  WHERE date > date('2019-01-01')
+  WHERE
+    date > date('2019-01-01')
   UNION ALL
   SELECT
     "hopannotation1" AS datatype,
@@ -28,7 +30,8 @@ WITH all_types AS (
     parser.Time as parseTime,
   FROM
     `{{PROJECT}}.raw_ndt.hopannotation1`
-  WHERE date > date('2019-01-01')
+  WHERE
+    date > date('2019-01-01')
   UNION ALL
   SELECT
     "pcap" AS datatype,
@@ -37,7 +40,8 @@ WITH all_types AS (
     parser.Time as parseTime,
   FROM
     `{{PROJECT}}.raw_ndt.pcap`
-  WHERE date > date('2019-01-01')
+  WHERE
+    date > date('2019-01-01')
   UNION ALL
   SELECT
     "scamper1" AS datatype,
@@ -46,13 +50,16 @@ WITH all_types AS (
     parser.Time as parseTime,
   FROM
     `{{PROJECT}}.raw_ndt.scamper1`
-  WHERE date > date('2019-03-28')
+  WHERE
+    date > date('2019-03-28')
 )
 
-SELECT datatype, COUNT(distinct date) AS value_throughput
-FROM all_types
-WHERE (parseTime
-        BETWEEN TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 24 HOUR)
-            AND CURRENT_TIMESTAMP())
-   	AND date < DATE_SUB(CURRENT_DATE(), INTERVAL 1 DAY) -- exclude daily.
-GROUP BY datatype
+SELECT
+  datatype, COUNT(distinct date) AS value_throughput
+FROM
+  all_types
+WHERE
+  (parseTime BETWEEN TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 24 HOUR) AND CURRENT_TIMESTAMP())
+  AND date < DATE_SUB(CURRENT_DATE(), INTERVAL 1 DAY) -- exclude daily.
+GROUP BY
+  datatype
