--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -839,11 +839,13 @@ groups:
 
 # GardenerHistoricalThroughputIsStalled fires when historical reprocessing for
 # datatypes under processing by the v2 pipeline falls below 1 date / day.
+# The bq_gardener_historical_throughput metric is under the bigquery exporter 3h
+# deployment, so the timeout for this alert is 3 hours and 10 minutes.
   - alert: GardenerHistoricalThroughputIsStalled
     expr: |
       increase(gardener_jobs_total{status="success"}[1d]) > 0
         UNLESS ON(datatype) bq_gardener_historical_throughput > 0
-    for: 10m
+    for: 190m
     labels:
       repo: dev-tracker
       severity: ticket
